Even more UI fixes

--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -52,11 +52,12 @@
 
 
 		</div>
-		<footer th:replace="fragments.html::footer"></footer>
-
-		<script src="/js/tools/get-text.js"></script>
-		<script src="/js/lib/fontawesome.all.js"></script>
-		<script src="/js/lib/jquery.min.js"></script>
+	</div>
+	
+	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/lib/jquery.min.js"></script>
+	
 </body>
 
 </html>
