--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -27,7 +27,7 @@
 				<p>DE 12345678901</p>
 			</div>
 			<div class="box">
-				<p th:text="#{contact}"></p>
+				<p th:text="#{contact}" style="margin-bottom: 16px;"></p>
 				<form id="imprint-form" th:action="@{/imprint/contact}"
 					method="POST">
 					<div class="field">
@@ -40,7 +40,7 @@
 					</div>
 					<div style="padding-top: 12px;"></div>
 					<div th:replace="fragments.html::captcha"></div>
-					<button class="button" th:text="#{submit}"></button>
+					<button class="button colored is-primary" th:text="#{submit}"></button>
 				</form>
 			</div>
 		</div>
