Min and max length for first names

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -48,7 +48,7 @@
 									<label class="label" th:text="#{first-name}" style="float: left;"></label><span
 										class="asterisk">*</span>
 									<div class="control">
-										<input class="input" type="text" name="firstName" maxlength="12" required>
+										<input class="input" type="text" name="firstName" minlength="2" maxlength="20" required>
 									</div>
 								</div>
 								<div class="field">
