Fix mp3 audio cutting

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -337,6 +337,7 @@
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/notification.js"></script>
+	<script src="/js/lib/Mp3LameEncoder.min.js"></script>
 	<script src="/js/lib/cutter.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
