--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -206,7 +206,7 @@
 								controls></audio>
 						</div>
 						<div style="display: flex; float: left;">
-							<div class="notification is-info" style="height: 40px; margin-right: 4px; opacity: 0.5;">.mp3 .wav</div>
+							<div class="notification is-info" style="height: 40px; margin-right: 4px; opacity: 0.5; font-size: 0.9em;">.mp3 .wav</div>
 							<div class="colored button is-info" id="audio-upload-button" style="margin-right: 4px;">
 								<i class="fa fa-microphone"></i>
 							</div>
