--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
 
 <body>
 	<div id="main">
-		<header th:replace="fragments.html::header"></header>
+		<header th:replace="fragments.html::header-logged-out"></header>
 		<section class="hero is-info is-medium is-bold">
 			<div class="hero-body">
 				<div class="container has-text-centered">
