--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
 
 <body>
 	<div id="main">
-		<header th:insert="fragments.html::header"></header>
+		<header th:insert="fragments.html::header-logged-out"></header>
 		<div class="section">
 
 			<div class="container">
