--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -28,7 +28,7 @@
 		<div class="section">
 			<div class="container">
 				<div class="field">
-					<div id="profile-warning"></div>
+					<div id="profile-warning"><div th:replace="fragments.html::profile-warning"></div></div>
 				</div>
 
 				<div class="field">
