--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,7 +21,7 @@
 
 <body>
 	<div id="main">
-		<header th:replace="fragments.html::header"></header>
+		<header th:replace="fragments.html::header-logged-out"></header>
 		<div class="section">
 			<div class="container">
 				<h3 class="title" th:text="#{register.title}"></h3>
