--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="fragments.html::header"></header>
+		<header th:insert="fragments.html::header-logged-out"></header>
 		<div class="section">
 			<div class="box">
 				<p th:text="${companyName}"></p>
