--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 	<div id="main">
-		<header th:insert="fragments.html::header"></header>
+		<header th:insert="fragments.html::header-logged-out"></header>
 		<div class="section">
 			<div class="container">
 				<div class="column">
