--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -18,7 +18,7 @@
 <body>
 	<div id="main">
 
-		<header th:insert="fragments.html::header"></header>
+		<header th:insert="fragments.html::header-logged-out"></header>
 		<div class="section">
 			<div class="box" th:utext="${content}">
 			</div>
