--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -22,9 +22,9 @@
 			<div class="box">
 				<p th:text="${companyName}"></p>
 				<p>Nho Quy Dinh</p>
-				<p>Impressumsstraße 7, 22222 Impressumsstadt</p>
-				<p>contact@alovoa.com</p>
-				<p>DE 12345678901</p>
+				<p>Neulanderweg 18, 21423 Winsen Luhe</p>
+				<p>Tel: 015678593504</p>
+				<p>info@alovoa.com</p>
 			</div>
 			<div class="box">
 				<p th:text="#{contact}" style="margin-bottom: 16px;"></p>
