Use gmail for now, since port 25 is blocked

--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -24,7 +24,8 @@
 				<p>Nho Quy Dinh</p>
 				<p>Neulanderweg 18, 21423 Winsen Luhe</p>
 				<p>Tel: 015678593504</p>
-				<p>info@alovoa.com</p>
+				<p>alovoa.love@gmail.com</p>
+				<p style="display: none;">info@alovoa.com</p>
 			</div>
 			<div class="box">
 				<p th:text="#{contact}" style="margin-bottom: 16px;"></p>
