--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -25,7 +25,7 @@
 <body>
 	<div id="main-logged-in">
 		<header th:insert="fragments.html::header-logged-in"></header>
-		<div class="section">
+		<div class="section" style="scrollbar-width: auto !important; ">
 			<div class="container">
 				<div class="field">
 					<div id="profile-warning">
